--- a/apps/block_scout_web/assets/css/components/_card.scss
+++ b/apps/block_scout_web/assets/css/components/_card.scss
@@ -86,7 +86,7 @@ $card-tab-icon-color-active: #fff !default;
 }
 
 .card-subtitle {
-  color: #323BCC;
+  color: #474747;
   font-size: 14px;
   margin: 0 0 30px;
 
