--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/_topnav.html.eex
@@ -10,10 +10,18 @@
     <div class="" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <%= if Application.get_env(:block_scout_web, BlockScoutWeb.WebRouter)[:enabled] do %>
+	  <li class="nav-item">
+            <%= link to: webapp_url(@conn), class: "home", "data-test": "header_logo" do %>
+                <span class="nav-link-icon">
+			<img src="../images/home/nav1.png">
+                </span>
+		Home
+            <% end %>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link topnav-nav-link dropdown-toggle" href="#" id="navbarBlocksDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="nav-link-icon">
-                <%= render BlockScoutWeb.IconsView, "_block_icon.html" %>
+                <img src="../images/home/nav2.png">
               </span>
               <%= gettext("Blocks") %>
             </a>
@@ -32,7 +40,7 @@
           <li class="nav-item dropdown" id="activeTransactions">
             <a href="#" role="button" id="navbarTransactionsDropdown" class="nav-link topnav-nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="nav-link-icon">
-                <%= render BlockScoutWeb.IconsView, "_transaction_icon.html" %>
+                <img src="../images/home/nav3.png">
               </span>
               <%= gettext("Transactions") %>
             </a>
@@ -57,7 +65,7 @@
           <li class="nav-item dropdown">
             <a href="#" role="button" id="navbarTokensDropdown" class="nav-link topnav-nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="nav-link-icon">
-                <%= render BlockScoutWeb.IconsView, "_tokens_icon.html" %>
+                <img src="../images/home/nav4.png">
               </span>
               <%= gettext("Tokens") %>
             </a>
@@ -79,7 +87,7 @@
           <li class="nav-item dropdown">
             <a href="#" role="button" id="navbarAPIsDropdown" class="nav-link topnav-nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span class="nav-link-icon">
-                <%= render BlockScoutWeb.IconsView, "_api_icon.html" %>
+                <img src="../images/home/nav5.png">
               </span>
               <%= gettext("APIs") %>
             </a>
@@ -95,7 +103,7 @@
                     to: api_url() <> api_docs_path(@conn, :index)
                   ) %>
               <%= link(
-                    gettext("Eth RPC"),
+                    gettext("CTXC RPC"),
                     class: "dropdown-item #{tab_status("eth-rpc-api-docs", @conn.request_path)}",
                     to: api_url() <> api_docs_path(@conn, :eth_rpc)
                   ) %>
