--- a/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
+++ b/apps/block_scout_web/assets/css/components/_dashboard-banner.scss
@@ -220,6 +220,7 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
       margin-right: 10px;
       background: #573BFF;
       border-radius: 50px;
+      border: 1px solid #fff;
     }
 
     img {
@@ -232,5 +233,14 @@ $dashboard-banner-chart-axis-font-color-alt: #333;
     color: #272727;
     font-size: 32px;
     font-weight: bolder;
+  }
+
+  .dashboard-banner-network-stats-item:hover {
+    background-color: #573BFF;
+
+    .dashboard-banner-network-stats-label,
+    .dashboard-banner-network-stats-value {
+      color: #fff;
+    }
   }
 }
