--- a/apps/block_scout_web/assets/css/components/_footer.scss
+++ b/apps/block_scout_web/assets/css/components/_footer.scss
@@ -34,23 +34,14 @@ $footer-logo-width: auto !default;
 .footer-social-icons {
   align-items: center;
   display: flex;
-  margin: 0 0 25px;
+
+  img {
+    width: 32px;
+  }
 }
 
 .footer-social-icon {
-  color: $footer-social-icon-color;
-  font-size: 22px;
   margin-right: 15px;
-  text-decoration: none;
-  transition: $transition-cont;
-
-  &:hover {
-    color: #fff;
-  }
-
-  &:focus {
-    color: darken($footer-text-color, 5);
-  }
 
   &:last-child {
     margin-right: 0;
