--- a/apps/block_scout_web/assets/css/components/_i_tooltip_2.scss
+++ b/apps/block_scout_web/assets/css/components/_i_tooltip_2.scss
@@ -1,8 +1,8 @@
 .i-tooltip-2 {
-    color: $i-tooltip-background;
+    color: #CDD5F4;
   
     &:hover {
-      color: $i-tooltip-background-active;
+      color: #666DFE;
     }
 }
 
