--- a/apps/block_scout_web/assets/css/components/_badge.scss
+++ b/apps/block_scout_web/assets/css/components/_badge.scss
@@ -34,8 +34,8 @@ $badge-neutral-background-color: rgba($secondary, .1) !default;
   }
 
   &.badge-danger {
-    background-color: $badge-danger-background-color;
-    color: $badge-danger-color;
+    background-color: #FFE7E3;
+    color: #F27768;
   }
 
   &.badge-neutral {
