--- a/apps/block_scout_web/assets/css/components/_btn_no_border.scss
+++ b/apps/block_scout_web/assets/css/components/_btn_no_border.scss
@@ -12,19 +12,11 @@ $btn-no-border-color: $primary !default;
 }
 
 .btn-no-border-link-to-tems {
-  background-color: rgba($primary, 0.1) !important;
-  border-color: #00000000 !important;
-  align-items: center;
-  border-radius: 2px;
-  display: flex;
-  font-size: 12px;
+  background-color: #F5F8FF;
   position: relative;
   user-select: none;
-  text-align: center;
   white-space: nowrap;
-  color: $primary !important;
-
-  &:hover {
-    border-color: #f5f6fa;
-  }
+  color: #573BFF !important;
+  display: inline;
+  border: none;
 }
