--- a/apps/block_scout_web/assets/css/components/_btn_wallet.scss
+++ b/apps/block_scout_web/assets/css/components/_btn_wallet.scss
@@ -3,8 +3,5 @@ $btn-wallet-dimensions: 31px !default;
 
 .btn-wallet-icon {
   @include square-icon-button($btn-wallet-color, $btn-wallet-dimensions);
-  color: $btn-wallet-color;
-  &:hover {
-    color: #fff;
-  }
+  color: #573BFF;
 }
