--- a/apps/block_scout_web/assets/css/components/_label.scss
+++ b/apps/block_scout_web/assets/css/components/_label.scss
@@ -1,6 +1,5 @@
 .bs-label {
     color: #868686;
-    font-size: 12px;
 
     &.right {
         margin-left: auto;
@@ -38,51 +37,29 @@
         margin-top: -3px;
     }
     &.success {
-        background: rgba(40, 167, 69, 0.2);
-        color: rgb(40, 167, 69);
+	background: #DEF5DE;
+        color: #50A64D;
+	padding: 5px 8px;
+        border-radius: 5px;
     }
 }
 
-.confirmations-label {
+.confirmations-label, .index-label {
     position: relative;
-    padding-left: 1.15rem;
-    border-top-right-radius: .25rem;
-    border-bottom-right-radius: .25rem;
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    padding-right: 10px;
+    color: #8C91A3;
+    background-color: #F5F8FF;
+    padding: 5px 8px;
+    border-radius: 5px;
 }
 
-.confirmations-label:after {
-    position: absolute;
-    left: 0;
-    top: 0;
+.confirmations-label:after, .index-label:after {
     content: "";
-    border-top: .9rem solid transparent;
-    border-bottom: .9rem solid transparent;
-    border-left: .9rem solid #fff;
-}
-
-.index-label {
-    position: relative;
-    padding-right: .3rem;
-    border-top-left-radius: .25rem;
-    border-bottom-left-radius: .25rem;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    background: #f5f6fa;
-    color: #77838f;
-    padding: .2rem .5rem;
-}
-
-.index-label:after {
     position: absolute;
-    left: 100%;
-    top: 0;
-    content: "";
-    border-top: .8rem solid transparent;
-    border-bottom: .8rem solid transparent;
-    border-left: .8rem solid rgba(245, 246, 250, 1);
+    right: 0;
+    bottom: 0;
+    border: 5px solid #fff;
+    border-left-color: transparent;
+    border-top-color: transparent;
 }
 
 .testnet-label {
