--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -133,6 +133,13 @@ $tile-body-a-color: #5959d8 !default;
   }
 }
 
+.tile.tile-muted.text-center {
+  padding: 20px;
+  color: #474747;
+  font-size: 14px;
+  background-color: #F7F8FA;
+}
+
 .tile-code {
   border-radius: 4px;
   border: 1px solid $border-color;
