--- a/apps/block_scout_web/assets/css/components/_token-balance-dropdown.scss
+++ b/apps/block_scout_web/assets/css/components/_token-balance-dropdown.scss
@@ -7,6 +7,7 @@
     border-radius: 4px !important;
     box-shadow: 0 0.5rem 1rem rgba(202, 199, 226, .3) !important;
     border: 1px solid #e2e5ec !important;
+    position: absolute !important;
   }
 
   .dropdown-items {
