--- a/apps/block_scout_web/assets/css/components/_transaction.scss
+++ b/apps/block_scout_web/assets/css/components/_transaction.scss
@@ -10,8 +10,8 @@
 
 .download-all-transactions {
 	text-align: center;
-	color: #a3a9b5;
-	font-size: 13px;
+	color: #868686;
+	font-size: 14px;
 	margin-top: 10px;
 	@media (min-width: 768px) {
 		margin-top: 30px;
@@ -20,13 +20,14 @@
 		display: inline-flex;
 		align-items: center;
 		text-decoration: none;
+		color: #573BFF;
 		svg {
 			position: relative;
 			margin-left: 2px;
 			top: -3px;
 			left: 3px;
 			path {
-				fill: $primary;
+				fill: #573BFF;
 			}
 		}
 		&:hover {
