--- a/apps/block_scout_web/assets/css/_mixins.scss
+++ b/apps/block_scout_web/assets/css/_mixins.scss
@@ -121,7 +121,7 @@
   background-color: #fff;
   border-radius: 2px;
   border: 1px solid #e1e1e1;
-  color: #686868;
+  color: #686868 !important;
   cursor: pointer;
   display: flex;
   font-size: $font-size;
