--- a/apps/block_scout_web/assets/css/components/_pagination_container.scss
+++ b/apps/block_scout_web/assets/css/components/_pagination_container.scss
@@ -4,12 +4,12 @@ $pagination-page-link-background-active: $primary !default;
 $pagination-page-link-color-active: #fff !default;
 
 @mixin pagination-container-base($background-color, $text-color) {
-  background-color: $background-color;
-  border: 1px solid $background-color;
-  color: $text-color;
+  border: 1px solid #DBDBDB;
+  color: #ADADAD;
+  background-color: #fff;
 
   path {
-    fill: $text-color;
+    fill: #ADADAD;
   }
 }
 
@@ -76,7 +76,7 @@ $pagination-page-link-color-active: #fff !default;
     .page-link {
       @include pagination-container-base($pagination-page-link-background, $pagination-page-link-color);
       align-items: center;
-      border-radius: 2px;
+      border-radius: 5px;
       display: flex;
       font-size: 12px;
       font-weight: 600;
