--- a/apps/block_scout_web/assets/css/_mixins.scss
+++ b/apps/block_scout_web/assets/css/_mixins.scss
@@ -124,7 +124,7 @@
   color: #686868 !important;
   cursor: pointer;
   display: flex;
-  font-size: $font-size;
+  font-size: 14px;
   height: 36px;
   justify-content: center;
   outline: none;
