--- a/apps/block_scout_web/assets/css/components/_btn_no_border.scss
+++ b/apps/block_scout_web/assets/css/components/_btn_no_border.scss
@@ -19,4 +19,6 @@ $btn-no-border-color: $primary !default;
   color: #573BFF !important;
   display: inline;
   border: none;
+  border-radius: 5px;
+  padding: 5px 8px;
 }
