--- a/apps/block_scout_web/lib/block_scout_web/templates/address_internal_transaction/index.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_internal_transaction/index.html.eex
@@ -42,6 +42,7 @@
                 ) %>
               </div>
             </div>
+<%= render BlockScoutWeb.CommonComponentsView, "_pagination_container.html", cur_page_number: "1", show_pagination_limit: true, data_next_page_button: true, data_prev_page_button: true %>
           </div>
         </div>
 
