--- a/apps/block_scout_web/assets/css/components/_coin-balance-tile.scss
+++ b/apps/block_scout_web/assets/css/components/_coin-balance-tile.scss
@@ -1,5 +1,6 @@
 .tile.tile-type-coin-balance {
-	padding: 10px 0;
+	padding: 10px 0 10px 10px;
+  border-left: 6px solid #573BFF;
   	border-bottom: 1px solid #F2F2F2;
 	font-size: 14px;
 
