--- a/apps/block_scout_web/assets/css/components/_navbar.scss
+++ b/apps/block_scout_web/assets/css/components/_navbar.scss
@@ -32,7 +32,7 @@ $navbar-logo-width: 100% !default;
     .nav-link, .home {
       outline: none;
       align-items: center;
-      color: #202020;
+      color: #573BFF;
       display: flex;
       font-size: 14px;
       position: relative;
