--- a/apps/block_scout_web/assets/css/components/_tile.scss
+++ b/apps/block_scout_web/assets/css/components/_tile.scss
@@ -14,7 +14,8 @@ $tile-type-token-transfer-color: #323BCC !default;
 $tile-type-token-transfer-bgcolor: #E6F0FF !default;
 $tile-type-unique-token-color: $orange !default;
 $tile-type-unique-token-image-color: $orange !default;
-$tile-type-internal-transaction-color: $teal !default;
+$tile-type-internal-transaction-color: #323BCC !default;
+$tile-type-internal-transaction-bgcolor: #E6F0FF !default;
 $tile-type-api-documentation-color: $primary !default;
 $tile-type-progress-bar-color: $primary !default;
 $tile-status-error-reason: #ff7986 !default;
@@ -54,8 +55,8 @@ $tile-body-a-color: #5959d8 !default;
       background: #fff;
     }
 
-    .row a, .tile-body a {
-      color: $color !important;
+    a {
+      color: $color;
     }
   }
 }
@@ -131,14 +132,16 @@ $tile-body-a-color: #5959d8 !default;
 
   pre {
     color: #474747;
+    padding: 5px;
   }
 }
 
-.tile.tile-muted.text-center {
+.tile.tile-muted.text-center, .alert-info {
   padding: 20px;
   color: #474747;
   font-size: 14px;
-  background-color: #F7F8FA;
+  background-color: #F5F5FF;
+  border: none;
 }
 
 .tile-code {
@@ -176,10 +179,6 @@ $tile-body-a-color: #5959d8 !default;
   font-size: 12px;
   margin-bottom: 10px;
 
-  a {
-    color: #573BFF !important;
-  }
-
   .tile-body {
     margin-bottom: 10px;
     background-color: #F6F8FF;
@@ -203,7 +202,7 @@ $tile-body-a-color: #5959d8 !default;
     $tile-type-emission-reward-color
   );
   @include generate-tile-block(".tile-type-transaction", $tile-type-transaction-color, $tile-type-transaction-bgcolor );
-  @include generate-tile-block(".tile-type-contract-call", $tile-type-contract-call-color, $tile-type-contract-call-bgcolor );
+  @include generate-tile-block(".tile-type-contract-call", $tile-type-transaction-color, $tile-type-transaction-bgcolor);
   @include generate-tile-block(
     ".tile-type-contract-creation",
     $tile-type-contract-creation-color
@@ -217,10 +216,7 @@ $tile-body-a-color: #5959d8 !default;
     ".tile-type-unique-token-image",
     $tile-type-unique-token-image-color
   );
-  @include generate-tile-block(
-    ".tile-type-internal-transaction",
-    $tile-type-internal-transaction-color
-  );
+  @include generate-tile-block(".tile-type-internal-transaction", $tile-type-internal-transaction-color, $tile-type-internal-transaction-bgcolor);
   @include generate-tile-block(
     ".tile-type-api-documentation",
     $tile-type-api-documentation-color
