--- a/apps/block_scout_web/assets/css/theme/_base_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_base_variables.scss
@@ -219,7 +219,8 @@ $container-max-widths: (
 
 @media (min-width: 1200px) { 
   .container {
-    max-width: 1300px !important;
+    // max-width: 1300px !important;
+    max-width: 100% !important;
   }
  }
 
