--- a/apps/block_scout_web/lib/block_scout_web/templates/address_validation/index.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/address_validation/index.html.eex
@@ -8,9 +8,12 @@
       <%= render BlockScoutWeb.AddressView, "_tabs.html", address: @address, is_proxy: is_proxy, conn: @conn %>
       <div data-async-listing="<%= @current_path %>" class="card-body">
         <%= render BlockScoutWeb.CommonComponentsView, "_channel_disconnected_message.html", text: gettext("Connection Lost, click to load newer validations") %>
-        <h2 class="card-title"><%=gettext("Blocks Validated")%></h2>
-
-        <div data-empty-response-message class="tile tile-muted text-center" style="display: none;">
+<div class="top-pagination-outer-container float-right">
+	<%= render BlockScoutWeb.CommonComponentsView, "_pagination_container.html", cur_page_number: "1", show_pagination_limit: true, data_next_page_button: true, data_prev_page_button: true %>
+</div>       
+ <h2 class="card-title"><%=gettext("Blocks Validated")%></h2>
+        
+	<div data-empty-response-message class="tile tile-muted text-center" style="display: none;">
           <span><%= gettext "There are no blocks validated by this address." %></span>
         </div>
         <button data-error-message class="alert alert-danger col-12 text-left" style="display: none;">
