--- a/apps/block_scout_web/lib/block_scout_web/templates/block/overview.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/block/overview.html.eex
@@ -80,7 +80,7 @@
               <%= gettext("Transactions") %>
             </dt>
             <dd class="col-sm-9 col-lg-10">
-              <a href="#txs" class="page-link bs-label large btn-no-border-link-to-tems">
+              <a href="#txs" class="large btn-no-border-link-to-tems">
                 <%= if @block_transaction_count == 1 do %>
                   <%= gettext "%{count} Transaction", count: @block_transaction_count %>
                 <% else %>
@@ -174,8 +174,8 @@
             <dl class="row">
               <dt class="col-sm-3 col-lg-2 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                text: gettext("The total gas amount used in the block and its percentage of gas filled in the block.") %>
-                <%= gettext("Gas Used") %>
+                text: gettext("The total endorphin amount used in the block and its percentage of endorphin filled in the block.") %>
+                <%= gettext("Endorphin Used") %>
               </dt>
               <dd class="col-sm-9 col-lg-10"><%= @block.gas_used |> BlockScoutWeb.Cldr.Number.to_string! %> | <%= if Decimal.compare(@block.gas_limit, 0) == :eq, do: "0%", else: ((Decimal.to_integer(@block.gas_used) / Decimal.to_integer(@block.gas_limit)) |> BlockScoutWeb.Cldr.Number.to_string!(format: "#.#%")) %></dd>
             </dl>
@@ -183,8 +183,8 @@
             <dl class="row">
               <dt class="col-sm-3 col-lg-2 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                text: gettext("Total gas limit provided by all transactions in the block.") %>
-                <%= gettext("Gas Limit") %>
+                text: gettext("Total endorphin limit provided by all transactions in the block.") %>
+                <%= gettext("Endorphin Limit") %>
               </dt>
               <dd class="col-sm-9 col-lg-10"><%= BlockScoutWeb.Cldr.Number.to_string!(@block.gas_limit) %></dd>
             </dl>
@@ -212,7 +212,7 @@
             <dl class="row">
                 <dt class="col-sm-3 col-lg-2 text-muted">
                   <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                  text: Explorer.coin_name() <> " " <> gettext("burned from transactions included in the block (Base fee (per unit of gas) * Gas Used).") %>
+                  text: Explorer.coin_name() <> " " <> gettext("burned from transactions included in the block (Base fee (per unit of endorphin) * Endorphin Used).") %>
                   <%= gettext("Burnt Fees") %>
                 </dt>
                 <dd class="col-sm-9 col-lg-10"><i class="fa-solid fa-fire i-tooltip-2"></i> <%= format_wei_value(burned_fee, :ether) %></dd>
