--- a/apps/block_scout_web/lib/block_scout_web/templates/transaction/overview.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/transaction/overview.html.eex
@@ -349,8 +349,8 @@
           <dl class="row">
             <dt class="col-sm-3 col-lg-2 text-muted">
               <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                text: gettext("Price per unit of gas specified by the sender. Higher gas prices can prioritize transaction inclusion during times of high usage.") %>
-              <%= gettext "Gas Price" %>
+                text: gettext("Price per unit of endorphin specified by the sender. Higher endorphin prices can prioritize transaction inclusion during times of high usage.") %>
+              <%= gettext "Endorphin Price" %>
             </dt>
             <dd class="col-sm-9 col-lg-10"> <%= gas_price(@transaction, :gwei) %> </dd>
           </dl>
@@ -369,8 +369,8 @@
           <dl class="row">
             <dt class="col-sm-3 col-lg-2 text-muted">
               <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                text: gettext("Maximum gas amount approved for the transaction.") %>
-              <%= gettext "Gas Limit" %>
+                text: gettext("Maximum endorphin amount approved for the transaction.") %>
+              <%= gettext "Endorphin Limit" %>
             </dt>
             <dd class="col-sm-9 col-lg-10"> <%= format_gas_limit(@transaction.gas) %> </dd>
           </dl>
@@ -378,8 +378,8 @@
             <dl class="row">
               <dt class="col-sm-3 col-lg-2 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                  text: gettext("Maximum total amount per unit of gas a user is willing to pay for a transaction, including base fee and priority fee.") %>
-                <%= gettext "Max Fee per Gas" %>
+                  text: gettext("Maximum total amount per unit of endorphin a user is willing to pay for a transaction, including base fee and priority fee.") %>
+                <%= gettext "Max Fee per Endorphin" %>
               </dt>
               <dd class="col-sm-9 col-lg-10"> <%= format_wei_value(max_fee_per_gas, :gwei) %> </dd>
             </dl>
@@ -388,8 +388,8 @@
             <dl class="row">
               <dt class="col-sm-3 col-lg-2 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                  text: gettext("User defined maximum fee (tip) per unit of gas paid to validator for transaction prioritization.") %>
-                <%= gettext "Max Priority Fee per Gas" %>
+                  text: gettext("User defined maximum fee (tip) per unit of endorphin paid to validator for transaction prioritization.") %>
+                <%= gettext "Max Priority Fee per Endorphin" %>
               </dt>
               <dd class="col-sm-9 col-lg-10"> <%= format_wei_value(max_priority_fee_per_gas, :gwei) %> </dd>
             </dl>
@@ -408,7 +408,7 @@
             <dl class="row">
               <dt class="col-sm-3 col-lg-2 text-muted">
                 <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                  text: gettext("Amount of") <> " " <> Explorer.coin_name() <> " " <> gettext("burned for this transaction. Equals Block Base Fee per Gas * Gas Used.") %>
+                  text: gettext("Amount of") <> " " <> Explorer.coin_name() <> " " <> gettext("burned for this transaction. Equals Block Base Fee per Endorphin * Endorphin Used.") %>
                 <%= gettext "Transaction Burnt Fee" %>
               </dt>
               <dd class="col-sm-9 col-lg-10"><i class="fa-solid fa-fire i-tooltip-2"></i> <%= format_wei_value(burned_fee, :ether) %>
@@ -422,8 +422,8 @@
           <dl class="row">
             <dt class="col-sm-3 col-lg-2 text-muted transaction-gas-used">
               <%= render BlockScoutWeb.CommonComponentsView, "_i_tooltip_2.html",
-                text: gettext("Actual gas amount used by the transaction.") %>
-              <%= gettext "Gas Used by Transaction" %>
+                text: gettext("Actual endorphin amount used by the transaction.") %>
+              <%= gettext "Endorphin Used" %>
             </dt>
             <% gas_used_perc = gas_used_perc(@transaction) %>
             <dd class="col-sm-9 col-lg-10"> <%= gas_used(@transaction) %> <%= if gas_used_perc, do: "| #{gas_used_perc}%" %></dd>
