--- a/apps/block_scout_web/assets/css/_mixins.scss
+++ b/apps/block_scout_web/assets/css/_mixins.scss
@@ -133,7 +133,7 @@
   transition: $transition-cont;
   white-space: nowrap;
   width: fit-content;
-  font-weight: 400;
+  font-weight: bold;
 
   &:hover {
     text-decoration: none;
