--- a/apps/block_scout_web/assets/css/components/_stakes_table.scss
+++ b/apps/block_scout_web/assets/css/components/_stakes_table.scss
@@ -140,7 +140,7 @@ $stakes-link-color: $primary !default;
 .stakes-td {
   border-bottom: 1px solid #E4E4E4;
   font-size: 14px;
-  font-weight: normal;
+  font-weight: bold;
   height: 50px;
   line-height: 1.5;
   padding-right: $stakes-table-cell-separation;
