--- a/apps/block_scout_web/assets/css/components/_token-balance-dropdown.scss
+++ b/apps/block_scout_web/assets/css/components/_token-balance-dropdown.scss
@@ -16,7 +16,7 @@
 
     .dropdown-item {
       &:hover {
-        color: $secondary;
+        color: #fff !important;
       }
       .row:nth-child(2) {
         p {
