--- a/apps/block_scout_web/lib/block_scout_web/templates/chain/show.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/chain/show.html.eex
@@ -16,6 +16,7 @@
                 <span class="dashboard-banner-network-stats-value" data-selector="average-block-time">
                   <%= Timex.format_duration(average_block_time, Explorer.Counters.AverageBlockTimeDurationFormat) %>
                 </span>
+                <img src="../images/home/time.png" class="dashboard-banner-network-stats-item-backgroundImg">
               </div>
           <% end %>
           <div class="dashboard-banner-network-stats-item dashboard-banner-network-stats-item-2">
@@ -39,6 +40,7 @@
                 </span>
               <% end %>
             </div>
+                <img src="../images/home/TotalTransactions.png" class="dashboard-banner-network-stats-item-backgroundImg">
           </div>
           <div class="dashboard-banner-network-stats-item dashboard-banner-network-stats-item-3">
             <span class="dashboard-banner-network-stats-label">
@@ -48,6 +50,7 @@
             <span class="dashboard-banner-network-stats-value" data-selector="block-count">
               <%= BlockScoutWeb.Cldr.Number.to_string!(@block_count, format: "#,###") %>
             </span>
+                <img src="../images/home/TotalBlocks.png" class="dashboard-banner-network-stats-item-backgroundImg">
           </div>
           <div class="dashboard-banner-network-stats-item dashboard-banner-network-stats-item-4">
             <span class="dashboard-banner-network-stats-label">
@@ -57,6 +60,7 @@
             <span class="dashboard-banner-network-stats-value" data-selector="address-count">
               <%= BlockScoutWeb.Cldr.Number.to_string!(@address_count, format: "#,###") %>
             </span>
+            <img src="../images/home/WalletAddresses.png" class="dashboard-banner-network-stats-item-backgroundImg">
           </div>
         </div>
       </div>
