--- a/apps/block_scout_web/lib/block_scout_web/templates/tokens/index.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/tokens/index.html.eex
@@ -13,7 +13,7 @@
 		<label class="tokens-list-search-input-container tokens mr-3">
 			<input data-search-field="" class="form-control tokens-list-search-input search-input" type="text" name="filter" placeholder="Token name or symbol" id="search-text-input" />
 		</label>
-    	<%= render BlockScoutWeb.CommonComponentsView, "_pagination_container.html", position: "top", cur_page_number: "1", show_pagination_limit: true, data_next_page_button: true, data_prev_page_button: true %>
+    	<%= render BlockScoutWeb.CommonComponentsView, "_pagination_container.html", position: "top", cur_page_number: @cur_page_number, show_pagination_limit: true, data_next_page_button: true, data_prev_page_button: true, items_count: @items_count %>
 	</div>
 
     <div class="addresses-table-container">
